# pokemon-calc

./: .env.example  .gitignore  .prettierignore  LICENSE  README.md  download-pokemon-data.js  lingui.config.js  next.config.mjs  package.json  pnpm-lock.yaml  pokeapi-schema.gql  pokemon-data.gql  tailwind.config.ts  tsconfig.json
.github/workflows/: deploy.yml
app/: layout.tsx
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/backend/: main.py
backend/backend/nl_to_mquery/: __init__.py  extract_json.py  myopenai.py  pokedex.json  pokedex_schema.json  super_prompt.txt
backend/tests/: test_extract_json.py
public/: treemap.html
src/: appRouterI18n.ts  middleware.ts  withLingui.tsx
src/api/: index.ts  query.ts
src/app/: page.tsx
src/atoms/: atoms.ts
src/components/: CommandMenu.tsx  DebouncedInput.tsx  ExternalLink.tsx  JsonEditor.tsx  LangSwitcher.tsx  LinguiClientProvider.tsx  Link.tsx  MainNav.tsx  MobileNav.tsx  MstSvIcon.tsx  SiteHeader.tsx  SiteLanguageSelect.tsx  SiteThemeModeSelect.tsx  Textarea2.tsx  ThemeModeSwitch.tsx  TypeBadge.tsx  TypeCheckbox.tsx  TypeRadio.tsx  icons.tsx
src/config/: site.ts
src/domain/: constants.ts  pokemon.ts
src/hooks/: useDownloadJSON.ts  useLoadPokemonLingui.ts  useLocalePath.ts  usePathname.ts
src/locales/: en.po  ja.po  ko.po  pseudo.po  zh-Hans.po  zh-Hant.po
src/providers/: AxiosProvider.tsx  FlexsearchProvider.tsx  QueryClientProvider.tsx  ThemeProvider.tsx
src/types/: utry.d.ts
src/utils/: binarySearch.ts  formatResponseError.ts  getI18nIds.tsx  mysift.ts  (+10 more)
(+30 files in other folders)
